played a lil bit with the code files to make it easier for IDE to make a project

--- a/RefactoringProject/EcProject/.project
+++ b/RefactoringProject/EcProject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Refactoring</name>
+	<name>EcProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
